# ManusYARP

./: CMakeLists.txt  README.md
app/conf/: manusYARP.ini
include/iCub/: manusYarpModule.h  manusYarpRateThread.h
src/: main.cpp  manusYarpModule.cpp  manusYarpRateThread.cpp
